# terminal-pong

./: .gitignore  CMakeLists.txt  README.md  compile.sh  meson.build
src/: ball.cpp  commands.cpp  game.cpp  inputHandler.cpp  main.cpp  ncurses.cpp  paddle.cpp  screen.cpp  window.cpp  world.cpp
src/include/: ball.h  commands.h  constants.h  game.h  i_entity.h  inputHandler.h  ncurses.h  paddle.h  screen.h  window.h  world.fwd.h  world.h
src/include/fwd/: game.fwd.h  world.fwd.h
src/include/interfaces/: i_command.h  i_entity.h
